--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-browser-dynamic": "5.0.1",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/email-composer": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.3",
+    "cordova-plugin-email-composer": "^0.8.11",
     "firebase": "^4.6.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -37,5 +39,10 @@
     "@ionic/app-scripts": "3.1.2",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-email-composer": {}
+    }
+  }
 }
