--- a/package.json
+++ b/package.json
@@ -22,14 +22,26 @@
     "@angular/platform-browser-dynamic": "5.0.1",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/email-composer": "^4.4.2",
+    "@ionic-native/file": "^4.4.2",
+    "@ionic-native/file-chooser": "^4.4.2",
+    "@ionic-native/file-path": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.3",
+    "cordova-android": "~6.3.0",
+    "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-email-composer": "^0.8.11",
+    "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-filechooser": "^1.0.1",
+    "cordova-plugin-filepath": "^1.1.0",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
     "firebase": "^4.6.2",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
@@ -42,7 +54,18 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-email-composer": {}
-    }
+      "cordova-plugin-email-composer": {},
+      "cordova-plugin-filechooser": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-file": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
