--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@ionic-native/file": "^4.4.2",
     "@ionic-native/file-chooser": "^4.4.2",
     "@ionic-native/file-path": "^4.4.2",
+    "@ionic-native/paypal": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.3",
+    "card.io.cordova.mobilesdk": "^2.1.0",
+    "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "~6.3.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-email-composer": "^0.8.11",
@@ -62,7 +65,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-filepath": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "com.paypal.cordova.mobilesdk": {}
     },
     "platforms": [
       "android"
