--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser-dynamic": "5.0.1",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/email-composer": "^4.4.2",
+    "@ionic-native/fcm": "^4.4.2",
     "@ionic-native/file": "^4.4.2",
     "@ionic-native/file-chooser": "^4.4.2",
     "@ionic-native/file-path": "^4.4.2",
     "@ionic-native/paypal": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
+    "@ionic-native/unique-device-id": "^4.4.2",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.3",
@@ -36,11 +38,13 @@
     "cordova-android": "~6.3.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-email-composer": "^0.8.11",
+    "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-filechooser": "^1.0.1",
     "cordova-plugin-filepath": "^1.1.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.1",
     "firebase": "^4.6.2",
     "ionic-angular": "3.9.2",
@@ -66,7 +70,9 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-filepath": {},
       "cordova-plugin-file": {},
-      "com.paypal.cordova.mobilesdk": {}
+      "com.paypal.cordova.mobilesdk": {},
+      "cordova-plugin-fcm": {},
+      "cordova-plugin-uniquedeviceid": {}
     },
     "platforms": [
       "android"
