--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/file": "^4.4.2",
     "@ionic-native/file-chooser": "^4.4.2",
     "@ionic-native/file-path": "^4.4.2",
+    "@ionic-native/in-app-browser": "^4.5.2",
     "@ionic-native/paypal": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
@@ -33,6 +34,8 @@
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.3",
+    "aws-amplify": "^0.1.0",
+    "aws-sdk": "^2.167.0",
     "card.io.cordova.mobilesdk": "^2.1.0",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "~6.3.0",
@@ -42,6 +45,7 @@
     "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-filechooser": "^1.0.1",
     "cordova-plugin-filepath": "^1.1.0",
+    "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
@@ -72,7 +76,8 @@
       "cordova-plugin-file": {},
       "com.paypal.cordova.mobilesdk": {},
       "cordova-plugin-fcm": {},
-      "cordova-plugin-uniquedeviceid": {}
+      "cordova-plugin-uniquedeviceid": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
