--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.0.1",
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-browser-dynamic": "5.0.1",
+    "@ionic-native/camera": "^4.5.2",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/email-composer": "^4.4.2",
     "@ionic-native/fcm": "^4.4.2",
@@ -39,6 +40,7 @@
     "card.io.cordova.mobilesdk": "^2.1.0",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "~6.3.0",
+    "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-email-composer": "^0.8.11",
     "cordova-plugin-fcm": "^2.1.2",
@@ -77,7 +79,8 @@
       "com.paypal.cordova.mobilesdk": {},
       "cordova-plugin-fcm": {},
       "cordova-plugin-uniquedeviceid": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
