--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.2",
+    "@types/node": "^8.5.2",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
