--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "~6.3.0",
     "cordova-plugin-camera": "^3.0.0",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-email-composer": "^0.8.11",
     "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-file": "^5.0.0",
@@ -49,10 +49,10 @@
     "cordova-plugin-filepath": "^1.1.0",
     "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "firebase": "^4.6.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "firebase": "4.8.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.2",
+    "@types/node": "^8.5.2",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
