--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,9 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "target": "es5",
+    "types": ["node"],
     "typeRoots": [
-      "../node_modules/@types"
+      "../node_modules/@types", "node_modules/@types", "./node_modules/@types"
     ]
   },
   "include": [
