--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/file": "^4.4.2",
     "@ionic-native/file-chooser": "^4.4.2",
     "@ionic-native/file-path": "^4.4.2",
+    "@ionic-native/http": "^4.5.3",
     "@ionic-native/in-app-browser": "^4.5.2",
     "@ionic-native/paypal": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
@@ -40,6 +41,7 @@
     "card.io.cordova.mobilesdk": "^2.1.0",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "~6.3.0",
+    "cordova-plugin-advanced-http": "^1.9.1",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-email-composer": "^0.8.11",
@@ -81,7 +83,8 @@
       "cordova-plugin-fcm": {},
       "cordova-plugin-uniquedeviceid": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "android"
