--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@ionic-native/file": "^4.4.2",
     "@ionic-native/file-chooser": "^4.4.2",
     "@ionic-native/file-path": "^4.4.2",
+    "@ionic-native/file-transfer": "^4.5.3",
     "@ionic-native/http": "^4.5.3",
     "@ionic-native/in-app-browser": "^4.5.2",
+    "@ionic-native/network": "^4.5.3",
     "@ionic-native/paypal": "^4.4.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
@@ -47,10 +49,12 @@
     "cordova-plugin-email-composer": "^0.8.11",
     "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filechooser": "^1.0.1",
     "cordova-plugin-filepath": "^1.1.0",
     "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -84,7 +88,9 @@
       "cordova-plugin-uniquedeviceid": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-camera": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "android"
