--- a/package.json
+++ b/package.json
@@ -37,28 +37,29 @@
     "@ionic-native/unique-device-id": "^4.4.2",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
-    "angularfire2": "^5.0.0-rc.3",
+    "angularfire2": "^5.0.0-rc.6",
     "aws-amplify": "^0.1.0",
     "aws-sdk": "^2.167.0",
     "card.io.cordova.mobilesdk": "^2.1.0",
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "~6.3.0",
-    "cordova-plugin-advanced-http": "^1.9.1",
+    "cordova-ios": "^4.5.4",
+    "cordova-plugin-advanced-http": "^1.11.0",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-email-composer": "^0.8.11",
+    "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filechooser": "^1.0.1",
-    "cordova-plugin-filepath": "^1.1.0",
+    "cordova-plugin-filepath": "^1.2.0",
     "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "firebase": "4.8.0",
+    "firebase": "4.9.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
